// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Using this guide renders using this guide banner correctly 1`] = `
.c6 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c0 {
  outline: none;
  position: relative;
  padding: 2rem 2.4rem;
  width: 100%;
  background: #000;
  margin-bottom: 1rem;
}

.c4 {
  width: 100%;
  padding: 0 4.2rem;
}

.c2 {
  color: #424242;
  font-size: 3.6rem;
  line-height: 4rem;
  -webkit-letter-spacing: -0.02rem;
  -moz-letter-spacing: -0.02rem;
  -ms-letter-spacing: -0.02rem;
  letter-spacing: -0.02rem;
  padding: 2rem 0 1rem 0;
  margin: 0;
  text-align: center;
  width: 100%;
  color: #fff;
}

.c5 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  position: absolute;
  border-radius: 50%;
  background: #fff;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  top: 2rem;
  right: 2.4rem;
}

.c7 {
  color: #000;
  height: 2.8rem;
  width: 2.8rem;
  padding: 0.4rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
}

@media screen and (max-width:30em) {
  .c0 {
    padding: 1rem 1.6rem;
  }
}

@media print {
  .c0 {
    display: none;
  }
}

@media screen and (max-width:50em) {
  .c4 {
    max-width: 30rem;
    padding: 0;
  }
}

@media screen and (max-width:75em) {
  .c2 {
    color: #424242;
    font-size: 1.6rem;
    line-height: 2rem;
    -webkit-letter-spacing: -0.02rem;
    -moz-letter-spacing: -0.02rem;
    -ms-letter-spacing: -0.02rem;
    letter-spacing: -0.02rem;
    padding: 1rem 0 1rem 0;
    margin: 0;
    color: #fff;
  }
}

@media screen and (max-width:30em) {
  .c5 {
    top: 1rem;
    right: 1.6rem;
  }
}

@media screen and (max-width:75em) {
  .c7 {
    height: 1.6rem;
    width: 1.6rem;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <h2
      className="c2"
    >
      Using This Guide
    </h2>
  </div>
  <div
    className="c3"
  >
    <picture>
      <source
        media="(max-width: 50em)"
        srcSet="banner_mobile.png"
      />
      <img
        alt="The image presents the structure of study guides. The first element of each block summarizes, clarifies, or enriches key content. The second element is taken directly from the book. On the left side, there is a color label depending on the content."
        className="c4"
        src="banner.png"
        tabIndex={0}
      />
    </picture>
  </div>
  <button
    aria-label="Closes the image describing the structure of study guides."
    className="c5"
    data-analytics-disable-track={true}
    data-testid="close-utg"
    onClick={[MockFunction]}
  >
    <svg
      aria-hidden="true"
      className="c6 c7"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 352 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M242.72 256l100.07-100.07c12.28-12.28 12.28-32.19 0-44.48l-22.24-22.24c-12.28-12.28-32.19-12.28-44.48 0L176 189.28 75.93 89.21c-12.28-12.28-32.19-12.28-44.48 0L9.21 111.45c-12.28 12.28-12.28 32.19 0 44.48L109.28 256 9.21 356.07c-12.28 12.28-12.28 32.19 0 44.48l22.24 22.24c12.28 12.28 32.2 12.28 44.48 0L176 322.72l100.07 100.07c12.28 12.28 32.2 12.28 44.48 0l22.24-22.24c12.28-12.28 12.28-32.19 0-44.48L242.72 256z"
        fill="currentColor"
      />
    </svg>
  </button>
</div>
`;

exports[`Using this guide renders using this guide button correctly (when banner closed) 1`] = `
.c2 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c3 {
  height: 1.7rem;
  width: 1.7rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: auto;
  overflow: visible;
  color: #5e6062;
  position: relative;
  padding: 1.2rem 1.6rem 1.8rem;
  outline: none;
}

.c0 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  position: relative;
  height: 100%;
  margin-right: 3.2rem;
  margin-top: 0.6rem;
}

.c4 {
  font-size: 1.6rem;
  line-height: 2.5rem;
  font-weight: 600;
  margin-left: 0.5rem;
}

@media screen and (max-width:75em) {
  .c1 {
    padding-right: 1.4rem;
    padding-left: 1.4rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin-right: 0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c4 {
    display: none;
  }
}

<button
  aria-controls="using-this-guide-text"
  aria-expanded={false}
  aria-label="Using This Guide"
  className="c0"
  data-analytics-disable-track={true}
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="c1"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        fill="currentColor"
      />
    </svg>
    <span
      className="c4"
      id="using-this-guide-text"
    >
      Using This Guide
    </span>
  </div>
</button>
`;

exports[`Using this guide renders using this guide button correctly (when banner open) 1`] = `
.c2 {
  display: inline-block;
  vertical-align: -.125em;
  overflow: hidden;
}

.c3 {
  height: 1.7rem;
  width: 1.7rem;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-left: auto;
  overflow: visible;
  color: #5e6062;
  position: relative;
  padding: 1.2rem 1.6rem 1.8rem;
  outline: none;
  color: #fff;
}

.c0 {
  cursor: pointer;
  border: none;
  margin: 0;
  padding: 0;
  background: none;
  position: relative;
  height: 100%;
  margin-right: 3.2rem;
  margin-top: 0.6rem;
  background: #000;
}

.c4 {
  font-size: 1.6rem;
  line-height: 2.5rem;
  font-weight: 600;
  margin-left: 0.5rem;
}

@media screen and (max-width:75em) {
  .c1 {
    padding-right: 1.4rem;
    padding-left: 1.4rem;
  }
}

@media print {
  .c1 {
    display: none;
  }
}

@media screen and (max-width:75em) {
  .c0 {
    margin-right: 0.8rem;
  }
}

@media screen and (max-width:75em) {
  .c4 {
    display: none;
  }
}

<button
  aria-controls="using-this-guide-text"
  aria-expanded={true}
  aria-label="Using This Guide"
  className="c0"
  data-analytics-disable-track={true}
  onClick={[MockFunction]}
  type="button"
>
  <div
    className="c1"
    tabIndex={-1}
  >
    <svg
      aria-hidden="true"
      className="c2 c3"
      fill="currentColor"
      focusable="false"
      viewBox="0 0 512 512"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M256 8C119.043 8 8 119.083 8 256c0 136.997 111.043 248 248 248s248-111.003 248-248C504 119.083 392.957 8 256 8zm0 448c-110.532 0-200-89.431-200-200 0-110.495 89.472-200 200-200 110.491 0 200 89.471 200 200 0 110.53-89.431 200-200 200zm107.244-255.2c0 67.052-72.421 68.084-72.421 92.863V300c0 6.627-5.373 12-12 12h-45.647c-6.627 0-12-5.373-12-12v-8.659c0-35.745 27.1-50.034 47.579-61.516 17.561-9.845 28.324-16.541 28.324-29.579 0-17.246-21.999-28.693-39.784-28.693-23.189 0-33.894 10.977-48.942 29.969-4.057 5.12-11.46 6.071-16.666 2.124l-27.824-21.098c-5.107-3.872-6.251-11.066-2.644-16.363C184.846 131.491 214.94 112 261.794 112c49.071 0 101.45 38.304 101.45 88.8zM298 368c0 23.159-18.841 42-42 42s-42-18.841-42-42 18.841-42 42-42 42 18.841 42 42z"
        fill="currentColor"
      />
    </svg>
    <span
      className="c4"
      id="using-this-guide-text"
    >
      Using This Guide
    </span>
  </div>
</button>
`;
